force-app/main/default/objects/ssot__ExternalAssessmentDefinition__dlm/fields/ssot__AssessmentContentVersion__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentContentVersion__c</fullName>
    <label>Assessment Content Version</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentContentVersion</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>