force-app/main/default/objects/ssot__ExternalAssessmentDefinition__dlm/fields/ssot__CustomAssessmentDisclaimerText__c.field-meta.xml
<CustomField>
    <fullName>ssot__CustomAssessmentDisclaimerText__c</fullName>
    <label>Custom Assessment Disclaimer</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CustomAssessmentDisclaimerText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>