force-app/main/default/objects/ssot__ExternalAssessmentDefinition__dlm/fields/ssot__ExternalAssessmentCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExternalAssessmentCategory__c</fullName>
    <label>External Assessment Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExternalAssessmentCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>