force-app/main/default/objects/ssot__ExternalAssessmentDefinition__dlm/fields/ssot__IsCustomAssessment__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsCustomAssessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Custom Assessment</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsCustomAssessment</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>